--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 	<modules>
 		<module>springcloud-server</module>
-		<!--<module>rbac</module>-->
+		<module>springcloud-provider</module>
 	</modules>
 
 	<build>
