--- a/springcloud-provider/pom.xml
+++ b/springcloud-provider/pom.xml
@@ -8,6 +8,8 @@
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 
+	<packaging>jar</packaging>
+
 	<groupId>cn.anan</groupId>
 	<artifactId>springcloud-provider</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,40 +18,42 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
 			<version>2.1.1.RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
 
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Finchley.SR2</version>
+				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+
 
 
 	<build>
