--- a/springcloud-provider/src/main/resources/application-dev.yml
+++ b/springcloud-provider/src/main/resources/application-dev.yml
@@ -1,18 +1,10 @@
 server:
   port: 9090
-  servlet:
-    context-path: /eureka-provider
+#  servlet:
+#    context-path: /eureka-provider
 
 eureka:
-#  instance:
-#    hostname: eureka1  # 设置eureka实例名称，与配置文件的变量为主
   client:
     service-url:
-      defaultZone: http://eureka1:8761/eureka/,http://eureka2:8761/eureka/  # 设置服务注册中心地址，指向另一个注册中心
-
-#eureka:
-#  client:
-#    register-with-eureka: false # 是否将自己注册到 eureka-server 中，默认为true。否则eureka会一直尝试自己注册自己，导致异常
-#    fetch-registry: false # 是否从 eureka-server 中获取服务注册信息，默认为true
-
-
+      defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://cm01:8761/eureka/,http://cm02:8761/eureka/  # 设置服务注册中心地址，指向另一个注册中心
