--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 	<modules>
 		<module>springcloud-server</module>
-		<module>springcloud-provider</module>
+		<!--<module>springcloud-provider</module>-->
 	</modules>
 
 	<build>
