--- a/springcloud-provider/src/main/resources/application-dev.yml
+++ b/springcloud-provider/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 server:
   port: 9090
-#  servlet:
-#    context-path: /eureka-provider
-
+spring:
+  application:
+    name: provider
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-#      defaultZone: http://cm01:8761/eureka/,http://cm02:8761/eureka/  # 设置服务注册中心地址，指向另一个注册中心
+      defaultZone: http://cm01:8761/eureka/,http://cm02:8761/eureka/  # 设置服务注册中心地址，指向另一个注册中心 ，结构是一定的：http://{hostname}:{port}/eureka/
+
