provider 和 consumer 的远程调用，demo完成

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
 
 	<modules>
 		<module>springcloud-server</module>
-		<!--<module>springcloud-provider</module>-->
+		<module>springcloud-provider</module>
+		<module>springcloud-consumer</module>
 	</modules>
 
 	<build>
